--- a/0-/Developer Ideas.mediawiki
+++ b/0-/Developer Ideas.mediawiki
@@ -21,6 +21,7 @@ Here are some ideas about XMMS2 (or XEPs - ''XMMS2 Enhancement Proposals''), if 
 * [[Playlist Plugins as Client]]
 * [[Collaborative Playlist Management]]
 * [[Queue Playlist]]
+* [[Mediatags]]
 
 == Clients ==
 * '''[[Album Covers]]'''
