--- a/0-/Install instructions.mediawiki
+++ b/0-/Install instructions.mediawiki
@@ -19,7 +19,7 @@ If you are building XMMS2 on a binary distro, be sure to install -dev or -header
 All following libraries are '''not needed''' for building xmms2d itself, but will add extra functionality you might need. You will probably want MAD at the very least as without it, you can't play MP3s.
 
 *For xform plugins:
-** [http://curl.haxx.se Curl] (>= 7.11.2) - For listening to streams over HTTP.
+** [http://curl.haxx.se Curl] (>= 7.11.2; Debian/Ubuntu users will want libcurl3-openssl-dev or libcurl3-gnutls-dev) - For listening to streams over HTTP, also for the last.fm plugin
 ** [http://www.underbit.com/products/mad/ MAD] (Ubuntu and debian users will want libmad0-dev) - For listening to MPEG files (MPEG 1 & 2 layers I, II and III - includes MP3)
 ** [http://www.audiocoding.com/ FAAD] - For listening to AAC.
 ** [http://www.xiph.org Vorbisfile] - For listening to Ogg Vorbis.
