Changed URL back to ftp.code-monkey.de
Levitation import of page 1202 rev 7748 (minor).

--- a/0-/Client:XMMS2-Scrobbler.mediawiki
+++ b/0-/Client:XMMS2-Scrobbler.mediawiki
@@ -1,1 +1,1 @@
-{{Client| name=XMMS2-Scrobbler| author=[[Tilman Sauerbeck]]| website=http://code-monkey.de/pages/xmms2-scrobbler| version=0.1.3| devlanguage=Ruby| ui=None| screenshots=N/A| description=XMMS2-Scrobbler is an [http://www.audioscrobbler.com/ AudioScrobbler] client. Latest tarball available at http://exodus.xmms.se/~tilman/xmms2-scrobbler-0.1.3.tar.gz}}
+{{Client| name=XMMS2-Scrobbler| author=[[Tilman Sauerbeck]]| website=http://code-monkey.de/pages/xmms2-scrobbler| version=0.1.3| devlanguage=Ruby| ui=None| screenshots=N/A| description=XMMS2-Scrobbler is an [http://www.audioscrobbler.com/ AudioScrobbler] client. Latest tarball available at ftp://ftp.code-monkey.de/pub/xmms2-scrobbler/xmms2-scrobbler-0.1.3.tar.gz}}
