/* setup of the build environment */
Levitation import of page 2394 rev 7750.

--- a/0-/Client:Esperanza/Windows Build Instructions.mediawiki
+++ b/0-/Client:Esperanza/Windows Build Instructions.mediawiki
@@ -27,8 +27,11 @@ This is a guide, which should help to setup a Windows Build Environment for Xmms
    into:
    PREFIX += "c:/Programme/Xmms2/DrJekyll"
 
-
-
+   change:
+   CONFIG += console
+   into:
+   # CONFIG += console
+   except you want to have a console!
 
 == build it ==
 So far so good. Wasn't that difficult isn't it? :)
