--- a/0-/New medialib backend.mediawiki
+++ b/0-/New medialib backend.mediawiki
@@ -39,12 +39,17 @@ The schema is very simple and straightforward, each property is a row.
 
 == S4 implementation ==
 
-S4 is the working name for a new database backend that Anders has been thinking about. S4 stands for Short String Storage System (iirc). The idea is to optimize the system for short string storage which SQL isn't optimized for. The idea is to store each entry as a Object and each object has properties.
+S4 is the working name for a new database backend that Anders has been thinking about. S4 stands for Short String Storage System (iirc) (I think it could be "Storage System for/4 Short Strings" aswell). The idea is to optimize the system for short string storage which SQL isn't optimized for. The idea is to store each entry as a Object and each object has properties.
 
-#
-#
-#
-#
+It tries to address a few issues:
+# There is massive replication of strings. If you have 100 "Metallica" songs in your medialib the string Metallica is duplicated in 100 entries.
+# The structure that an album/artist/genre contains songs is implicit, attributes can only be set on songs, not on albums/artists.
+
+So there is basically just two triplets (in the form subject-verb-object). Entry-Has-Property, and Entry-Contains-Entry.
+
+A property is just a string-pair. Strings could(/should) be stored in a stringtable. Meaning that strings just are an integer, hence a string-pair is just an integer-pair, also known as an interer of twice bit-width.
+
+
 
 === Pro's with this implementation ===
 
