Levitation import of page 2396 rev 7761.

--- a/1-Talk/New medialib backend.mediawiki
+++ b/1-Talk/New medialib backend.mediawiki
@@ -1,3 +1,7 @@
 The way S4 stores data certainly looks very nice for how our data works, but I'm curious as to how querying would work for this system, as well as how it would store collections. Can we get some details on how searches will be handled and collections stored?
 
 --[[User:Alesbl|Alesbl]] 17:35, 10 August 2007 (CEST)
+
+Is there a prototype implementation somewhere that we can take a look? The abstract looks nice, but staring at a piece of code would be nice.
+
+--[[User:DavidAnderson|DavidAnderson]] 18:30, 10 August 2007 (CEST)
