Levitation import of page 2220 rev 7763.

--- a/0-/Client:Esperanza.mediawiki
+++ b/0-/Client:Esperanza.mediawiki
@@ -81,7 +81,7 @@ Releases can be found at http://exodus.xmms.se/~tru/esperanza/ and the latest de
 
 Download tarball, extract it, run configure and then make. That should produce the binary.
 
-For windows see here: [[Client:Esperanza/Windows_Build_Instructions]]
+For windows see here: [[Client:Esperanza/Windows_Build_Instructions|Windows Build Instructions]]
 
 == Bugtracker ==
 
