--- a/0-/Media Player Interfaces.mediawiki
+++ b/0-/Media Player Interfaces.mediawiki
@@ -195,7 +195,7 @@ Gives all meta data available for element at given position in the "TrackList"
   </method>
 
 ==== GetCurrentTrack ====
-Position of Current URI in the "TrackList"
+Return the position of current URI in the "TrackList." The return value is zero-based, so the position of the first URI in the "TrackList" is 0. The behavior of this method is unspecified if there are zero elements in the "TrackList."
 
    <method name="GetCurrentTrack">
      <arg type="i" direction="out" />
