--- a/0-/Media Player Interfaces.mediawiki
+++ b/0-/Media Player Interfaces.mediawiki
@@ -178,7 +178,7 @@ i.e. calling Quit with qdbus on VLC would be:
 === / ===
 
 ==== Identity ====
-Identify the "Media Player" as in "VLC 0.9.0", "bmpx 0.34.9", "Totem 2.16.2" ...
+Identify the "Media Player" as in "VLC 0.9.0", "bmpx 0.34.9", "Audacious 1.4.0" ...
 
    <method name="Identity">
      <arg type="s" direction="out"/>
