Levitation import of page 1303 rev 7775.

--- a/0-/Client:EkoXMMS2.mediawiki
+++ b/0-/Client:EkoXMMS2.mediawiki
@@ -1,1 +1,1 @@
-{{Client| name=EkoXMMS2| author=Leevi PietilÃ¤inen| website=http://sourceforge.net/projects/ekoxmms2/| version=[http://prdownloads.sourceforge.net/ekoxmms2/ekoxmms2-0.3.tar.bz2?download 0.3]| devlanguage=C| ui=GTK/Command line| screenshots=N/A| description=EkoXMMS2 is a small plugin to X-Chat and works like small XMMS2 client. EkoXMMS2 is written in C and should be compatible with many Operating Systems. EkoXMMS2 uses X-Chat's plugin API to communicate with X-Chat.}}
+{{Client| name=EkoXMMS2| author=Leevi PietilÃ¤inen| website=[http://www.ekowc.net/index.php?option=content&task=view&id=3&/Ekoxmms2-v06=&Itemid=10 http://www.ekowc.net/ekoxmms2]| version=[http://www.ekowc.net/ekoxmms2/ekoxmms2-0.6.tar.bz2 0.6]| devlanguage=C| ui=GTK/Command line| screenshots=N/A| description=EkoXMMS2 is a small plugin to X-Chat and works like small XMMS2 client. EkoXMMS2 is written in C and should be compatible with many Operating Systems. EkoXMMS2 uses X-Chat's plugin API to communicate with X-Chat.}}
