--- a/0-/Media Player Interfaces.mediawiki
+++ b/0-/Media Player Interfaces.mediawiki
@@ -112,6 +112,8 @@ The "Tracklist" '''can''', but does not '''need''' to:
 "Metadata" is data that the files carry within themselves as a means of self-identification (commonly known as "tags"), or data that has been retrieved about the files trough other means, e.g. an internet service that provides additional data about particular media files.
 "Metadata" is an array of dict entries, like ("length", 253), ("name", "Bolero"), ("video-codec", "DIVX"). The dict entry is in the form (string, variant) eg: {sv}.
 
+'''NOTE''': This is what ''VLC'' currently sends; there has no standard been agreed upon yet -- mderezynski
+
 Furthermore, "Metadata" can be split into two categories:
 
 1) Technical metadata:
@@ -131,8 +133,206 @@ Furthermore, "Metadata" can be split into two categories:
 * "genre":"s"
 
 This list is informative, and can be extended up to your needs, for example: "age of the captain":"i"
-
 Only Required fields are: "URI" and "length"
+
+'''This is what BMP sends:'''
+I've copied and pasted our attribution definition code directly so it's clear to see which data type a particular attribute is.
+
+The first field is the 'name' and is totally informal; it never gets send over DBus; the 2nd name _is_ the key of the key <-> value pair of the metadata; follows a type identifier, and a rather meaningless flag for anything external:
+
+      {
+        "Location",
+        "location",
+        VALUE_TYPE_STRING,
+        true
+      },
+      {
+        "Title",
+        "title",
+        VALUE_TYPE_STRING,
+        true
+      },
+      {
+        "Track",
+        "tracknumber",
+        VALUE_TYPE_INT,
+        true
+      },
+      {
+        "Time",
+        "time",
+        VALUE_TYPE_INT,
+        true
+      },
+      {
+        "Genre",
+        "genre",
+        VALUE_TYPE_STRING,
+        true
+      },
+      {
+        "Comment",
+        "comment",
+        VALUE_TYPE_STRING,
+        true
+      },
+      {
+        "Rating",
+        "rating",
+        VALUE_TYPE_INT,
+        true
+      },
+      {
+        "Date",
+        "date",
+        VALUE_TYPE_INT,
+        true
+      },
+      {
+        "Time Modified",
+        "mtime",
+        VALUE_TYPE_INT,
+        true
+      },
+      {
+        "Bitrate",
+        "bitrate",
+        VALUE_TYPE_INT,
+        true
+      },
+      {
+        "Samplerate",
+        "samplerate",
+        VALUE_TYPE_INT,
+        true
+      },
+      {      {
+        "MusicIP PUID",
+        "puid",
+        VALUE_TYPE_STRING,
+        true
+      },
+      {
+        "New Item",
+        "new_item",
+        VALUE_TYPE_INT,
+        true
+      },
+      {
+        "Track Hash",
+        "hash",
+        VALUE_TYPE_STRING,
+        true
+      },
+      {
+        "MusicBrainz Track ID",
+        "mb_track_id",
+        VALUE_TYPE_STRING,
+        true
+      },
+      {
+        "Artist",
+        "artist",
+        VALUE_TYPE_STRING,
+        false
+      },
+      {
+        "MusicBrainz Artist Id",
+        "mb_artist_id",
+        VALUE_TYPE_STRING,
+        false
+      },
+      {
+        "MusicBrainz Artist Sortname",
+        "mb_artist_sort_name",
+        VALUE_TYPE_STRING,
+        false
+      },
+      {
+        "Album",
+        "album",
+        VALUE_TYPE_STRING,
+        false
+      },
+      {
+        "MusicBrainz Album Id",
+        "mb_album_id",
+        VALUE_TYPE_STRING,
+        false
+      },
+      {
+        "MusicBrainz Release Date",
+        "mb_release_date",
+        VALUE_TYPE_STRING,
+        false
+      },
+      {
+        "Amazon Asin",
+        "asin",
+        VALUE_TYPE_STRING,
+        false
+      },
+      {
+        "Is MusicBrainz Album Artist",
+        "is_mb_album_artist",
+        VALUE_TYPE_INT,
+        false
+      },
+      {
+        "MusicBrainz Album Artist",
+        "mb_album_artist",
+        VALUE_TYPE_STRING,
+        false
+      },
+      {
+        "MusicBrainz Album Artist Id",
+        "mb_album_artist_id",
+        VALUE_TYPE_STRING,
+        false
+      },
+      {
+        "MusicBrainz Album Artist Sortname",
+        "mb_album_artist_sort_name",
+        VALUE_TYPE_STRING,
+        false
+      },
+      {
+        "Active Track",
+        "active",
+        VALUE_TYPE_INT,
+        true
+      },
+
+        "Play count",
+        "count",
+        VALUE_TYPE_INT,
+        true
+      },
+      {
+        "File Type",
+        "type",
+        VALUE_TYPE_STRING,
+        true
+      },
+      {
+        "Volume UDI",
+        "volume_udi",
+        VALUE_TYPE_STRING,
+        true
+      },
+      {
+        "Device UDI",
+        "device_udi",
+        VALUE_TYPE_STRING,
+        true
+      },
+      {
+        "Volume Relative Path",
+        "volume_relative_path",
+        VALUE_TYPE_STRING,
+        true
+      }
+
 
 Notes:
 * MPRIS implementations MUST provide at least the ''Basic'' interface.
