--- a/0-/Client:Esperanza/Roadmap.mediawiki
+++ b/0-/Client:Esperanza/Roadmap.mediawiki
@@ -1,39 +1,11 @@
 This page tries to collect the future of Esperanza. Please put new ideas in the "distant future" thing below and I will move it up. The &#10003; denotes that the function is implemented. See the 0.4 branch in the git tree.
 
-== [http://git.xmms.se/?p=esperanza.git;a=shortlog;h=0.4 Version 0.4] ==
-* &#10003; A shortcut to go to mini-mode. Because now you have to click on the icon to do that.
-* &#10003; First time Wizard - A wizard that pops up the first time a user starts esperanza. It should handle some basic configuration of Esperanza and the server. Importing musicfiles, setting the unix path, asking if the user wants to see the server browser all times, if the colors are good (ignore desktop aware...) on linux. and so on.
-** &#10003; add a skip wizard button
-** &#10003; show a progress while trying to connect to xmms2d
-** &#10003; show connect result not as a popup
-* &#10063; Rewrite playerwidget.cpp. This file is huge and does a lot of strange stuff. It should be split in smaller parts:
-** &#10003; Shortcut handling should be splitted out and use QShortcut instead.
-** &#10003; Less direct access to the dialogs / other widgets. Rewrite to use more signals
-** &#10063; When above is done the source should be reorganized so that dialogs and other windows are plugins to the main widget. It should register things like shortcuts and basic handling and then compile as a QPLUGIN, makes it easier to add new dialogs and not cludder playerwidget.cpp
-*** &#10003; convert streamingdialog
-*** &#10003; convert the about dialog
-*** &#10063; update and convert the jumptofiledialog
-*** &#10063; make serverbrowser and firsttimewizard another type of dialog plugin that can be accessed in some other way. First we need to define that interface then write the small code needed.
-*** &#10063; convert growl, systemtray, globalshortcut to plugins that doesn't have to be tied into the ui code. same here, define the interface and then write the code
-*** &#10063; playlist buttons doesn't work
-*** &#10003; shortcuts from dialogs work
-* &#10063; Split preferences dialog into preference manager / dialog.
-** &#10003; Write the manager
-** &#10003; Write the dialog
-** &#10063; make sure the settings are at the right tab
+== Version 0.5 ==
 * &#10063; Last.FM controls
 ** &#10063; Implement Last.FM: love/ban/skip in the main widget. Also add browsing to the streambrowser. make it pretty
 * &#10063; Info dialog that can give Last.FM recommends / musicbrainz info and so on. Evolution of the last.fm dialog.
 * &#10063; Make the medialib browser prettier
 ** &#10063; Animations when the medialib is shown?
-* &#10003; closing the Esperanza window should not make the app quit, but minimize it to tray. perhaps this can be an option in the preferences dialog.
-* &#10003; no entry in windowlist when tray icon is active.
-** &#10003; no entry in windowlist for minimode too
-* &#10003; add a setting, where you can choose between single- or double-click on the trayicon to show respectively hide the playerwindow.
-* &#10003; add GlobalShortcut functionality for e.g. play <=> pause, next song, previous song, show <=> hide window
-* &#10003; preferences dialog for direct access to xmms2d settings
-
-== Version 0.5 ==
 
 
 == Distant Future / New Features ==
@@ -62,6 +34,30 @@ This page tries to collect the future of Esperanza. Please put new ideas in the 
 ** incomplete albums have a menu option to add the missing songs and set the right order (when available in medialib)
 ** previous and next album buttons (also next random album)
 ** most of the album info should be based on [http://musicbrainz.org/doc/XMLWebService MusicBrainz] data, but there must be some fuzzy logic for songs without MusicBrainz ids
-
 * one step further Playlist Stuff: make a pluginAPI for a playlist widget, so we can support simple Playlists as Title per row, normal like the current Playlist and advanced Playlists like the Albumplaylist. And make theses playlists chooseable via preference dialog.
 * make the language selectable, or even let the user overrule the systems language setting
+
+== Older versions ==
+=== [http://git.xmms.se/?p=esperanza.git;a=shortlog;h=0.4 Version 0.4] ===
+* &#10003; A shortcut to go to mini-mode. Because now you have to click on the icon to do that.
+* &#10003; First time Wizard - A wizard that pops up the first time a user starts esperanza. It should handle some basic configuration of Esperanza and the server. Importing musicfiles, setting the unix path, asking if the user wants to see the server browser all times, if the colors are good (ignore desktop aware...) on linux. and so on.
+** &#10003; add a skip wizard button
+** &#10003; show a progress while trying to connect to xmms2d
+** &#10003; show connect result not as a popup
+* &#10003; Rewrite playerwidget.cpp. This file is huge and does a lot of strange stuff. It should be split in smaller parts:
+** &#10003; Shortcut handling should be splitted out and use QShortcut instead.
+** &#10003; Less direct access to the dialogs / other widgets. Rewrite to use more signals
+** &#10003; When above is done the source should be reorganized so that dialogs and other windows are plugins to the main widget. It should register things like shortcuts and basic handling and then compile as a QPLUGIN, makes it easier to add new dialogs and not cludder playerwidget.cpp
+*** &#10003; convert streamingdialog
+*** &#10003; convert the about dialog
+*** &#10003; shortcuts from dialogs work
+* &#10003; Split preferences dialog into preference manager / dialog.
+** &#10003; Write the manager
+** &#10003; Write the dialog
+** &#10003; make sure the settings are at the right tab
+* &#10003; closing the Esperanza window should not make the app quit, but minimize it to tray. perhaps this can be an option in the preferences dialog.
+* &#10003; no entry in windowlist when tray icon is active.
+** &#10003; no entry in windowlist for minimode too
+* &#10003; add a setting, where you can choose between single- or double-click on the trayicon to show respectively hide the playerwindow.
+* &#10003; add GlobalShortcut functionality for e.g. play <=> pause, next song, previous song, show <=> hide window
+* &#10003; preferences dialog for direct access to xmms2d settings
